Fixed spacing for radios

--- a/src/Inputs.css
+++ b/src/Inputs.css
@@ -42,6 +42,13 @@
     margin-right: 20px;
     margin-top: 5px;
     margin-bottom: 5px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.radio-circle {
+    margin: 10px;
 }
 
 @media (max-width: 700px) {
